# ege

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/native/: main.cpp
examples/sdl/: main.cpp  ui.hpp
include/ege/: backend.hpp  physics.hpp  runtime.hpp
include/ege/engine/: allocator.hpp  command_buffer.hpp  event.hpp  render_command.hpp  render_pipeline.hpp  spsc_queue.hpp
libs/backends/: CMakeLists.txt
libs/backends/esp32/: CMakeLists.txt  README.md
libs/backends/esp32/include/ege/backends/esp32/: esp32_backend.hpp
libs/backends/esp32/src/: esp32_backend.cpp
libs/backends/sdl/: CMakeLists.txt  README.md
libs/backends/sdl/include/ege/backends/sdl/: sdl_backend.hpp
libs/backends/sdl/src/: sdl_backend.cpp
libs/physics/: CMakeLists.txt
libs/physics/collision/: CMakeLists.txt
libs/physics/collision/include/ege/physics/: collision.hpp
libs/physics/simple/: CMakeLists.txt
libs/physics/simple/include/ege/physics/: simple_physics.hpp
src/engine/: CMakeLists.txt  allocator.cpp
tests/: CMakeLists.txt  allocator_test.cpp  command_buffer_test.cpp  physics_test.cpp  render_pipeline_test.cpp
